--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,9 @@
 <%= form_with model:@user, local:true do |f| %>
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+  <label for="inputImage">Image</label>
+  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+  <label for="inputIntroduction">Introduction</label>
+  <%= f.text_field :introduction, id:"inputIntroduction", placeholder:"自己紹介"%>
   <%= f.submit "変更を保存" %>
 <% end %>
