--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,17 @@
 <div class="userinfo">
-  <h1>User info</h1>
-  image
-  <h3 class="name"><%= @user.name %></h3>
-  <h3 class="introduction">introduction</h3>
+  <h2>User info</h2>
+  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
+  <table class="user">
+    <today>
+      <tr></tr>
+      <tr>
+        <th>name</th><th class="name"><%= @user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th><th class="introduction"><%= @user.introduction %></xth>
+      </tr>
+    </today>
+  </table>
   <% if @user.id == current_user.id %>
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
