--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,3 +16,16 @@
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
 </div>
+<%= form_with model: @book, local: true do |f| %>
+<h2>New book</h2>
+  <div class="field">
+   <label for="book_title">Title</label>
+    <%= f.text_field :title %>
+  </div>
+   <div class="field"></div>
+    <label for="book_body">Opinion</label>
+     <%= f.text_area :body %>
+    <div class="actions">
+     <%= f.submit 'Create Book' %>
+  </div>
+<% end %>
