--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,32 @@
 <%= render 'books/list', book_new: @book_new, user: @user %>
-<h2>Book datil</h2>
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-<p>
-  <strong>Body:</strong>
-  <%= @book.body %>
-</p>
-<%= link_to "Edit", edit_book_path(@book) %>
-|
-<%= link_to "Back", "/books" %>
+<div class="table">
+  <h2>Book detail</h2>
+  <table>
+    <thead>
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+    </thead>
+    <today>
+      <tr>
+        <td>
+         <%= link_to user_path(@book.user) do %>
+          <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+          <%= @book.user.name %>
+         <% end %>
+        </td>
+        <td class="book-title"><%= link_to @book.title, book_path(params[:id]) %></td>
+        <td class="book-body"><%= @book.body %></td>
+        </tr>
+    </today>
+  </table>
+</div>
+
+<% if @book.user == current_user %>
+ <%= link_to "Edit", edit_book_path(@book) %>
+ <%= link_to "Destroy", book_path(@book),method: :delete %>
+<% end %>
