--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,5 +6,5 @@
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
   <label for="inputIntroduction">Introduction</label>
   <%= f.text_field :introduction, id:"inputIntroduction", placeholder:"自己紹介"%>
-  <%= f.submit "変更を保存" %>
+  <%= f.submit "Update User" %>
 <% end %>
