--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,7 +16,7 @@
    <%= f.text_field :title %>
  </div>
  <div class="field">
-   <label for="book_body">Body</label>
+   <label for="book_body">Opinion</label>
    <%= f.text_area :body %>
  </div>
  <div class="actions">  <%= f.submit 'Update Book' %></div>
