--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,11 @@
-<h1>welcome to Bookers !!</h>
+<h1>welcome to <i class="fas fa-book"></i> <strong>Bookers</strong> !!</h1>
+<p>
+  In
+  <i class="fas fa-book"></i>
+  <strong>Bookers</strong>
+  ,
+</p>
+<p>you can share and exchange your opinions , inpressions , and emotions</p>
+<p>about various books!</p>
+<%= link_to "Log in", user_session_path %>
+<%= link_to "Sing up", new_user_registration_path %>
