--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,15 +2,20 @@
 <h1 class="heading">Books</h1>
   <table>
     <thead>
-      <tr>
+     <tr>
+      <th colspan="1"></th>
       <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
+      <th>Opinion</th>
+     </tr>
     </thead>
     <today>
       <tr>
         <% @books.each do |book| %>
+        <td>
+         <%= link_to book_path(book.id) do %>
+          <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+         <% end %>
+        </td>
         <td class="book-title"><%= link_to book.title,book_path(book) %></td>
         <td class="book-body"><%= book.body %></td>
         </tr>
