--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,22 @@
 <%= render 'books/list', book_new: @book_new, user: @user %>
+<h1 class="heading">Users</h1>
+  <table>
+    <thead>
+     <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+     </tr>
+    </thead>
+    <today>
+      <tr>
+        <% @users.each do |user| %>
+        <td>
+          <%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+        </td>
+        <td class="user_name"><%= user.name %></td>
+        <td class="user_show"><%= link_to"Show", user_path(user.id) %></td>
+        </tr>
+      <% end %>
+    </today>
+  </table>
