--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,13 @@
       </li>
     <% end %>
     </header>
+<div class="notifications">
+  <% flash.each do |key, value| %>
+    <p class="alert alert-<%= key %>">
+      <%= value %>
+    </p>
+  <% end %>
+</div>
     <%= yield %>
     <footer>CopyRight Infratop.inc</footer>
   </body>
