[Add]validation,acessabout

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'books/list', book_new: @book_new, user: @user %>
+<%= render 'books/list', book_new: @booknew, user: @user %>
 <div class="table">
   <h2>Book detail</h2>
   <table>
