--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,15 @@
-<%= render 'books/list', book_new: @book_new, user: @user %>
+<% if @booknew.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @booknew.errors.count %> errors prohibited this product from being saved:</h2>
+
+     <ul>
+      <% @booknew.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+     </ul>
+   </div>
+ <% end %>
+<%= render 'books/list', book_new: @booknew, user: @user %>
 <h1 class="heading">Books</h1>
   <table>
     <thead>
