--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,27 @@
 <h2>User info</h2>
 <%= form_with model:@user, local:true do |f| %>
+ <% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @user.errors.count %> errors prohibited this product from being saved:</h2>
+
+     <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+     </ul>
+   </div>
+<% end %>
+<div class="name">
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName" %>
+</div>
+<div class="image">
   <label for="inputImage">Image</label>
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+</div>
+<div class="introduction">
   <label for="inputIntroduction">Introduction</label>
   <%= f.text_field :introduction, id:"inputIntroduction" %>
-  <%= f.submit "Update User" %>
+</div>
+<div class="action"><%= f.submit "Update User" %></div>
 <% end %>
