--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'books/list', book_new: @book_new, user: @user %>
+<%= render 'books/list', book_new: @booknew, user: @user %>
 <h1 class="heading">Users</h1>
   <table>
     <thead>
