--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
 </div>
-<%= form_with model: @book_new, local: true do |f| %>
+<%= form_with model: @booknew, local: true do |f| %>
 <h2>New book</h2>
   <div class="field">
    <label for="book_title">Title</label>
