--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,21 @@
-<h1>welcome to <i class="fas fa-book"></i> <strong>Bookers</strong> !!</h1>
-<p>
-  In
-  <i class="fas fa-book"></i>
-  <strong>Bookers</strong>
-  ,
-</p>
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
-<p>about various books!</p>
-<%= link_to "Log in", user_session_path %>
-<%= link_to "Sing up", new_user_registration_path %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <h1>welcome to <i class="fas fa-book"></i> <strong>Bookers</strong> !!</h1>
+      <p>
+        In
+        <i class="fas fa-book"></i>
+        <strong>Bookers</strong>
+        ,
+        </p>
+        <p>you can share and exchange your opinions , inpressions , and emotions</p>
+        <p>about various books!</p>
+        <div class="row">
+          <%= link_to "Log in", user_session_path %>
+        </div>
+        <div class="row">
+          <%= link_to "Sing up", new_user_registration_path %>
+        </div>
+    </div>
+  </div>
+</div>
