--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
       <tr>
         <% @books.each do |book| %>
         <td>
-         <%= link_to book_path(book.id) do %>
+         <%= link_to user_path(book.user) do %>
           <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
          <% end %>
         </td>
