--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,57 +1,65 @@
-<div class="userinfo">
-  <h2>User info</h2>
-  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
-  <table class="user">
-    <today>
-      <tr></tr>
-      <tr>
-        <th>name</th><th class="name"><%= @user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th><th class="introduction"><%= @user.introduction %></xth>
-      </tr>
-    </today>
-  </table>
-  <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
-<%= form_with model: @booknew, local: true do |f| %>
-<h2>New book</h2>
-  <div class="field">
-   <label for="book_title">Title</label>
-    <%= f.text_field :title %>
-  </div>
-   <div class="field"></div>
-    <label for="book_body">Opinion</label>
-     <%= f.text_area :body %>
-    <div class="actions">
-     <%= f.submit 'Create Book' %>
-  </div>
-<% end %>
-
-<div class="table">
-  <h2>Books</h2>
-  <table>
-    <thead>
-    <tr>
-      <th colspan=""></th>
-      <th>Title</th>
-      <th>Opinion</th>
-    </tr>
-    </thead>
-    <today>
-      <tr>
-        <% @books.each do |book| %>
-        <td>
-         <%= link_to book_path(book.id) do %>
-          <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+       <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
+       <table class="table">
+        <today>
+         <tr></tr>
+         <tr>
+          <th>name</th>
+          <th class="name"><%= @user.name %></th>
+         </tr>
+         <tr>
+          <th>introduction</th>
+          <th class="introduction"><%= @user.introduction %></xth>
+         </tr>
+        </today>
+       </table>
+       <div class="row">
+         <% if @user.id == current_user.id %>
+          <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
          <% end %>
-        </td>
-        <td class="book-title"><%= link_to book.title,book_path(book) %></td>
-        <td class="book-body"><%= book.body %></td>
-        </tr>
-      <% end %>
-    </today>
-  </table>
+       </div>
+       <h2 class="mt-3">New book</h2>
+       <%= form_with model: @booknew, local: true do |f| %>
+       <div class="field">
+        <label for="book_title">Title</label>
+         <div class=form><%= f.text_field :title %></div>
+       </div>
+       <div class="field">
+        <label for="book_body">Opinion</label>
+        <div class=form><%= f.text_area :body %></div>
+       </div>
+       <div class="actions">
+        <%= f.submit 'Create Book' %>
+       </div>
+       <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+       <table>
+         <thead>
+         <tr>
+           <th colspan=""></th>
+           <th>Title</th>
+           <th>Opinion</th>
+         </tr>
+         </thead>
+         <today>
+           <tr>
+             <% @books.each do |book| %>
+             <td>
+              <%= link_to user_path(book.user) do %>
+                 <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+              <% end %>
+             </td>
+             <td class="book-title"><%= link_to book.title,book_path(book) %></td>
+             <td class="book-body"><%= book.body %></td>
+           </tr>
+            <% end %>
+         </today>
+       </table>
+    </div>
+  </div>
 </div>
