[Uodate]book.user.html

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,7 +41,7 @@
        <table>
          <thead>
          <tr>
-           <th colspan=""></th>
+           <th colspan="1"></th>
            <th>Title</th>
            <th>Opinion</th>
          </tr>
