--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,31 +1,36 @@
-<div class="userinfo">
+<div class="col-md-3">
   <h2>User info</h2>
-  <%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
-  <table class="user">
+   <%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
+   <table class="table">
     <today>
-      <tr></tr>
-      <tr>
-        <th>name</th><th class="name"><%= user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th><th class="introduction"><%= user.introduction %></xth>
-      </tr>
+     <tr></tr>
+     <tr>
+      <th>name</th>
+      <th class="name"><%= user.name %></th>
+     </tr>
+     <tr>
+      <th>introduction</th>
+      <th class="introduction"><%= user.introduction %></xth>
+     </tr>
     </today>
-  </table>
-  <% if user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
-  <% end %>
-</div>
-<%= form_with model: book_new, local: true do |f| %>
-<h2>New book</h2>
-  <div class="field">
-   <label for="book_title">Title</label>
-    <%= f.text_field :title %>
-  </div>
-   <div class="field"></div>
+   </table>
+   <div class="row">
+     <% if @user.id == current_user.id %>
+      <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
+     <% end %>
+   </div>
+   <h2 class="mt-3">New book</h2>
+   <%= form_with model: book_new, local: true do |f| %>
+   <div class="field">
+    <label for="book_title">Title</label>
+     <div class=form><%= f.text_field :title %></div>
+   </div>
+   <div class="field">
     <label for="book_body">Opinion</label>
-     <%= f.text_area :body %>
-    <div class="actions">
-     <%= f.submit 'Create Book' %>
-  </div>
-<% end %>
+    <div class=form><%= f.text_area :body %></div>
+   </div>
+   <div class="actions">
+    <%= f.submit 'Create Book' %>
+   </div>
+   <% end %>
+</div>
