--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,27 +1,32 @@
-<h1>Editing Book</h1>
-<%= form_with model:@book, local: true do |f| %>
- <% if @book.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @book.errors.count %> errors prohibited this product from being saved:</h2>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+   <h1>Editing Book</h1>
+   <%= form_with model:@book, local: true do |f| %>
+    <% if @book.errors.any? %>
+     <div id="error_explanation">
+       <h2><%= @book.errors.count %> errors prohibited this product from being saved:</h2>
+        <ul>
+         <% @book.errors.full_messages.each do |message| %>
+           <li><%= message %></li>
+         <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="field">
+      <label for="book_title">Title</label>
+      <div class=form><%= f.text_field :title %></div>
+    </div>
+    <div class="field">
+      <label for="book_body">Opinion</label>
+      <div class=form><%= f.text_area :body %></div>
+    </div>
+    <div class="actions">  <%= f.submit 'Update Book' %></div>
+    <% end %>
 
-     <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-     </ul>
-   </div>
- <% end %>
- <div class="field">
-   <label for="book_title">Title</label>
-   <div class=form><%= f.text_field :title %></div>
+   <%= link_to 'Show', book_path(@book) %>
+   |
+   <%= link_to 'Back', "/books" %>
+  </div>
  </div>
- <div class="field">
-   <label for="book_body">Opinion</label>
-   <div class=form><%= f.text_area :body %></div>
- </div>
- <div class="actions">  <%= f.submit 'Update Book' %></div>
- <% end %>
-
-<%= link_to 'Show', book_path(@book) %>
-|
-<%= link_to 'Back', "/books" %>
+</div>
