--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,27 +9,33 @@
      </ul>
    </div>
  <% end %>
-<%= render 'books/list', book_new: @booknew, user: @user %>
-<h1 class="heading">Books</h1>
-  <table>
-    <thead>
-     <tr>
-      <th colspan="1"></th>
-      <th>Title</th>
-      <th>Opinion</th>
-     </tr>
-    </thead>
-    <today>
-      <tr>
-        <% @books.each do |book| %>
-        <td>
-         <%= link_to user_path(book.user) do %>
-          <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-         <% end %>
-        </td>
-        <td class="book-title"><%= link_to book.title,book_path(book) %></td>
-        <td class="book-body"><%= book.body %></td>
-        </tr>
-      <% end %>
-    </today>
-  </table>
+ <div class="container px-5 px-sm-0">
+   <div class="row">
+     <%= render 'books/list', book_new: @booknew, user: @user %>
+     <div class="col-md-8 offset-md-1">
+       <h2 class="heading">Books</h2>
+         <table>
+           <thead>
+            <tr>
+             <th colspan="1"></th>
+             <th>Title</th>
+             <th>Opinion</th>
+            </tr>
+           </thead>
+           <today>
+             <tr>
+               <% @books.each do |book| %>
+               <td>
+                <%= link_to user_path(book.user) do %>
+                 <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+                <% end %>
+               </td>
+               <td class="book-title"><%= link_to book.title,book_path(book) %></td>
+               <td class="book-body"><%= book.body %></td>
+              </tr>
+             <% end %>
+           </today>
+         </table>
+     </div>
+   </div>
+ </div>
