--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,31 +1,26 @@
-<%= render 'books/list', book_new: @booknew, user: @user %>
-<div class="table">
-  <h2>Book detail</h2>
-  <table>
-    <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-    </thead>
-    <today>
-      <tr>
-        <td>
-         <%= link_to user_path(@book.user) do %>
-          <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-          <%= @book.user.name %>
-         <% end %>
-        </td>
-        <td class="book-title"><%= link_to @book.title, book_path(params[:id]) %></td>
-        <td class="book-body"><%= @book.body %></td>
-        <% if @book.user == current_user %>
-          <td><%= link_to "Edit", edit_book_path(@book) %></td>
-          <td><%= link_to "Destroy", book_path(@book),method: :delete, data:{ confirm: '本当に消しますか？' } %></td>
-        <% end %>
-      </tr>
-    </today>
-  </table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'books/list', book_new: @booknew, user: @user %>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table>
+          <today>
+            <tr>
+              <td>
+               <%= link_to user_path(@book.user) do %>
+                <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+                <%= @book.user.name %>
+               <% end %>
+              </td>
+              <td class="book-title"><%= link_to @book.title, book_path(params[:id]) %></td>
+              <td class="book-body"><%= @book.body %></td>
+              <% if @book.user == current_user %>
+                <td><%= link_to "Edit", edit_book_path(@book) %></td>
+                <td><%= link_to "Destroy", book_path(@book),method: :delete, data:{ confirm: '本当に消しますか？' } %></td>
+              <% end %>
+            </tr>
+          </today>
+        </table>
+    </div>
+  </div>
 </div>
