--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,28 @@
-<%= render 'books/list', book_new: @booknew, user: @user %>
-<h1 class="heading">Users</h1>
-  <table>
-    <thead>
-     <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-     </tr>
-    </thead>
-    <today>
-      <tr>
-        <% @users.each do |user| %>
-        <td>
-          <%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-        </td>
-        <td class="user_name"><%= user.name %></td>
-        <td class="user_show"><%= link_to"Show", user_path(user.id) %></td>
-        </tr>
-      <% end %>
-    </today>
-  </table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'books/list', book_new: @booknew, user: @user %>
+    <div class="col-md-8 offset-md-1">
+      <h2 class="heading">Users</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <today>
+          <tr>
+            <% @users.each do |user| %>
+            <td>
+              <%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+            </td>
+            <td class="user_name"><%= user.name %></td>
+            <td class="user_show"><%= link_to"Show", user_path(user.id) %></td>
+          </tr>
+            <% end %>
+        </today>
+      </table>
+    </div>
+  </div>
+</div>
