--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -11,12 +12,15 @@
 
 <body>
     <header>
-      <nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
          <il><%= link_to 'Bookers', root_path %></il>
-         <div>
-          <% if user_signed_in? %>
-          <ul>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav ml-auto">
+           <% if user_signed_in? %>
            <li>
             <%= link_to 'Home', user_path(current_user.id) %>
            </li>
@@ -43,10 +47,9 @@
            <li>
             <%= link_to "login", new_user_session_path %>
            </li>
-          </ul>
           <% end %>
-         </div>
-       </div>
+          </ul>
+        </div>
       </nav>
     </header>
 <main>
