--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,10 +7,12 @@
           <today>
             <tr>
               <td>
-               <%= link_to user_path(@book.user) do %>
-                <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-                <%= @book.user.name %>
-               <% end %>
+                <div class="user">
+                  <%= link_to user_path(@book.user) do %>
+                   <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+                   <%= @book.user.name %>
+                  <% end %>
+                </div>
               </td>
               <td class="book-title"><%= link_to @book.title, book_path(params[:id]) %></td>
               <td class="book-body"><%= @book.body %></td>
