[Add]bootstrap.table

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
     <%= render 'books/list', book_new: @booknew, user: @user %>
     <div class="col-md-8 offset-md-1">
       <h2 class="heading">Users</h2>
-      <table>
+      <table class="table">
         <thead>
           <tr>
             <th>image</th>
