--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
      <%= render 'books/list', book_new: @booknew, user: @user %>
      <div class="col-md-8 offset-md-1">
        <h2 class="heading">Books</h2>
-         <table>
+         <table class="table">
            <thead>
             <tr>
              <th colspan="1"></th>
