--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,7 +38,7 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-       <table>
+       <table class="table">
          <thead>
          <tr>
            <th colspan="1"></th>
