--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -16,7 +16,9 @@
    </table>
    <div class="row">
      <% if @user.id == current_user.id %>
-      <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
+      <button type="button" class="btn btn-outline-light btn-lg btn-block">
+       <%= link_to "", edit_user_path(user), class: "fas fa-user-cog" %>
+      </button>
      <% end %>
    </div>
    <h2 class="mt-3">New book</h2>
@@ -30,7 +32,7 @@
     <div class=form><%= f.text_area :body %></div>
    </div>
    <div class="actions">
-    <%= f.submit 'Create Book' %>
+    <%= f.submit 'Create Book', class: "btn btn-success" %>
    </div>
    <% end %>
 </div>
