--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -21,7 +21,7 @@
       <label for="book_body">Opinion</label>
       <div class=form><%= f.text_area :body %></div>
     </div>
-    <div class="actions">  <%= f.submit 'Update Book' %></div>
+    <div class="actions">  <%= f.submit 'Update Book', class: "btn btn-success" %></div>
     <% end %>
 
    <%= link_to 'Show', book_path(@book) %>
