--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,43 +12,60 @@
 
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-         <span><%= link_to 'Bookers', root_path %></span>
+         <%= link_to 'Bookers', root_path, class: "navbar-brand"%>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
            <% if user_signed_in? %>
-           <li>
-            <%= link_to 'Home', user_path(current_user.id) %>
-           </li>
-           <li>
-            <%= link_to 'Users', users_path(current_user.id) %>
-           </li>
-           <li>
-            <%= link_to 'Books', books_path(current_user.id) %>
-           </li>
-           <li>
-            <%= link_to "logout", destroy_user_session_path, method: :delete %>
-           </li>
+             <li>
+                <%= link_to user_path(current_user.id), class:"text-light" do %>
+                <i class="fas fa-home"></i><span>Home</span>
+                <% end %>
+             </li>
+             <li>
+                <%= link_to users_path(current_user.id) do %>
+                <i class="fas fa-users nav-link text-light"></i><span>Users</span>
+                <% end %>
+             </li>
+             <li>
+                <%= link_to books_path(current_user.id) do%>
+                <i class="fas fa-book-open nav-link text-light"></i><span>Books</span>
+                <% end %>
+             </li>
+             <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class="fas fa-sign-out-alt nav-link text-light"></i><span>logout</span>
+                <% end %>
+             </li>
 
            <% else %>
-           <li>
-            <%= link_to 'Home', root_path %>
-           </li>
-           <li>
-            <%= link_to 'About', home_about_path %>
-           </li>
-           <li>
-            <%= link_to "sign up", new_user_registration_path %>
-           </li>
-           <li>
-            <%= link_to "login", new_user_session_path %>
-           </li>
+             <li>
+              <%= link_to root_path do %>
+              <i class="fas fa-home nav-link text-light"></i><span>Home</span>
+              <% end %>
+             </li>
+             <li>
+              <%= link_to home_about_path do %>
+              <i class="fas fa-link nav-link text-light"></i><span>About</span>
+              <% end %>
+             </li>
+             <li>
+              <%= link_to new_user_registration_path do %>
+              <i class="fas fa-user-plus nav-link text-light"></i><span>sign up</span>
+              <% end %>
+             </li>
+             <li>
+              <%= link_to new_user_session_path do %>
+              <i class="fas fa-sign-in-alt nav-link text-light"></i><span>login</span>
+              <% end %>
+             </li>
           <% end %>
           </ul>
+         </div>
         </div>
       </nav>
     </header>
