--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
           <%= f.text_field :introduction, id:"inputIntroduction" %>
         </div>
       </div>
-      <div class="action"><%= f.submit "Update User" %></div>
+      <div class="action">  <%= f.submit "Update User", class: "btn btn-success" %></div>
       <% end %>
     </div>
   </div>
