--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -16,8 +16,7 @@
    </table>
    <div class="row">
      <% if @user.id == current_user.id %>
-      <button type="button" class="btn btn-outline-light btn-lg btn-block">
-       <%= link_to "", edit_user_path(user), class: "fas fa-user-cog" %>
+       <%= link_to "", edit_user_path(user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
       </button>
      <% end %>
    </div>
