--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,39 +27,39 @@
                 <% end %>
              </li>
              <li>
-                <%= link_to users_path(current_user.id) do %>
+                <%= link_to users_path(current_user.id), class:"text-light" do %>
                 <i class="fas fa-users nav-link text-light"></i><span>Users</span>
                 <% end %>
              </li>
              <li>
-                <%= link_to books_path(current_user.id) do%>
+                <%= link_to books_path(current_user.id), class:"text-light" do%>
                 <i class="fas fa-book-open nav-link text-light"></i><span>Books</span>
                 <% end %>
              </li>
              <li>
-                <%= link_to destroy_user_session_path, method: :delete do %>
+                <%= link_to destroy_user_session_path, method: :delete, class:"text-light" do %>
                 <i class="fas fa-sign-out-alt nav-link text-light"></i><span>logout</span>
                 <% end %>
              </li>
 
            <% else %>
              <li>
-              <%= link_to root_path do %>
+              <%= link_to root_path, class:"text-light" do %>
               <i class="fas fa-home nav-link text-light"></i><span>Home</span>
               <% end %>
              </li>
              <li>
-              <%= link_to home_about_path do %>
+              <%= link_to home_about_path, class:"text-light" do %>
               <i class="fas fa-link nav-link text-light"></i><span>About</span>
               <% end %>
              </li>
              <li>
-              <%= link_to new_user_registration_path do %>
+              <%= link_to new_user_registration_path, class:"text-light" do %>
               <i class="fas fa-user-plus nav-link text-light"></i><span>sign up</span>
               <% end %>
              </li>
              <li>
-              <%= link_to new_user_session_path do %>
+              <%= link_to new_user_session_path, class:"text-light" do %>
               <i class="fas fa-sign-in-alt nav-link text-light"></i><span>login</span>
               <% end %>
              </li>
