--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,9 +18,7 @@
        </table>
        <div class="row">
          <% if @user.id == current_user.id %>
-          <button type="button" class="btn btn-outline-light btn-lg btn-block">
-           <%= link_to "", edit_user_path(@user), class: "fas fa-user-cog" %>
-          </button>
+           <%= link_to "", edit_user_path(@user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
          <% end %>
        </div>
        <h2 class="mt-3">New book</h2>
