--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
           <button type="button" class="btn btn-success btn-lg btn-block">
-           <%= link_to "Sing up", user_path(current_user.id), class:"text-light" %>
+           <%= link_to "Sign Up", user_path(current_user.id), class:"text-light" %>
           </button>
         </div>
         <% else %>
@@ -29,7 +29,7 @@
         </div>
         <div class="row">
           <button type="button" class="btn btn-success btn-lg btn-block">
-            <%= link_to "Sing up", new_user_registration_path, class:"text-light" %>
+            <%= link_to "Sign Up", new_user_registration_path, class:"text-light" %>
           </button>
         </div>
         <% end %>
