--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -34,7 +34,7 @@
                </td>
                <td class="book-title"><%= link_to book.title,book_path(book) %></td>
                <td class="book-body"><%= book.body %></td>
-               <td class="favorite"><%= render 'books/favo', book: book %></td>
+               <td id="favo_<%= book.id %>"><%= render 'books/favo', book: book %></td>
                <td>コメント件数：<%= book.book_comments.count %></td>
               </tr>
              <% end %>
